tests/phppt/errors/capture_without_type_and_id.phppt
--TEST--
Bad macro identifier
--FILE--
<?php

macro {
    · foo
} >> {
    _
}

?>
--EXPECTF--
Bad macro capture identifier '·' on line 4.
